# CertHPrior

./: CMakeLists.txt  README.md
cmake/: RotPriorHConfigVersion.cmake.in
examples/: CMakeLists.txt  example_basic_plane.cpp  example_basic_zero.cpp  example_certifier_plane.cpp
include/: RotPriorH.h  RotPriorHConstraints.h  RotPriorHManifold.h  RotPriorHProblem.h  RotPriorHTypes.h  RotPriorHUtils.h
src/: RotPriorH.cpp  RotPriorHConstraints.cpp  RotPriorHManifold.cpp  RotPriorHProblem.cpp  RotPriorHUtils.cpp
utils/: generatePointCloudPlanar.cpp  generatePointCloudPlanar.h
